--- a/webapp/src/main/resources/templates/fleet/optionselection.html
+++ b/webapp/src/main/resources/templates/fleet/optionselection.html
@@ -162,11 +162,10 @@
         });
 
         request.done(function(data) {
-            console.log(data);
-            console.log(name);
+
          document.getElementById("basepack").innerHTML = name;
-           var b = document.getElementById("basepack2");
-            b.parentNode.removeChild(b);
+         var b = document.getElementById("basepack2");
+         b.parentNode.removeChild(b);
 
 
         });
@@ -196,6 +195,7 @@
             document.getElementById('extrapacks').deleteRow(id);
 
 
+
         });
 
         // callback handler that will be called on failure
@@ -220,7 +220,51 @@
         request.done(function(data) {
 
             document.getElementById('extraoptions').deleteRow(id);
-            console.log(data);
+
+            var table = document.getElementById("allOptions").getElementsByTagName('tbody')[0];
+            var new_tbody = document.createElement('tbody');
+
+           data.forEach(function(rowData) {
+
+                var row = document.createElement('tr');
+
+
+                var cell = document.createElement('td');
+                cell.appendChild(document.createTextNode(rowData["name"]));
+                row.appendChild(cell);
+
+               var cell2 = document.createElement('td');
+               var description = rowData["description"];
+               if(description == null){
+                   description = "";
+               }
+               cell2.appendChild(document.createTextNode(description));
+               row.appendChild(cell2);
+
+               var cell3 = document.createElement('td');
+
+               var a = document.createElement('a');
+               var linkText = document.createTextNode("Add");
+               a.appendChild(linkText);
+               a.title = "Add";
+
+
+               a.onclick = function() {
+                   addExtraOption(this, rowData["id"]);
+               }
+               a.className = "btn btn-primary form-control";
+
+
+
+               row.appendChild(a);
+               new_tbody.appendChild(row);
+
+            });
+
+            table.parentNode.replaceChild(new_tbody, table);
+
+
+
 
 
         });
@@ -232,9 +276,62 @@
         });
 
     }
+
+
+    function addExtraOption(element, id){
+
+        var request = $.ajax({
+            url : "http://localhost:8080//fleet/addAjaxExtraOption",
+            type : "post",
+            data : "id=" + id
+        });
+
+
+        request.done(function(data) {
+            var tableRef = document.getElementById('extraoptions');
+            console.log(tableRef);
+            console.log(name);
+
+            // Insert a row in the table at the last row
+            var newRow   = tableRef.insertRow(tableRef.rows.length);
+
+            // Insert a cell in the row at index 0 and  1
+            var newCell  = newRow.insertCell(0);
+            var newCell2 = newRow.insertCell(1);
+
+            // Append a text node to the cell
+            var newText  = document.createTextNode(data)
+            newCell.appendChild(newText);
+
+            var a = document.createElement('a');
+            var linkText = document.createTextNode("Remove");
+            a.appendChild(linkText);
+            a.title = "Remove";
+            var nbr = tableRef.getElementsByTagName('tr').length;
+            a.onclick = function() {
+                removeExtraOption(this);
+            }
+            a.className = "btn btn-primary form-control";
+
+            newCell2.appendChild(a);
+
+
+
+        });
+
+        // callback handler that will be called on failure
+        request.fail(function(jqXHR, textStatus, errorThrown) {
+            // log the error to the console
+            alert("The following error occured: " + textStatus, errorThrown);
+        });
+
+
+
+
+    }
+
+
     function addExtraPack(id, name){
-
-
         var request = $.ajax({
             url : "http://localhost:8080/fleet/addajaxextrapack",
             type : "post",
